--- a/public/style.css
+++ b/public/style.css
@@ -602,6 +602,10 @@ video {
   bottom: 40rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .left-1\/2 {
   left: 50%;
 }
@@ -624,10 +628,6 @@ video {
 
 .top-full {
   top: 100%;
-}
-
-.left-0 {
-  left: 0px;
 }
 
 .-z-10 {
@@ -812,44 +812,16 @@ video {
   height: 300px;
 }
 
+.h-\[90vh\] {
+  height: 90vh;
+}
+
 .h-auto {
   height: auto;
 }
 
 .h-full {
   height: 100%;
-}
-
-.h-\[35rem\] {
-  height: 35rem;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-\[40rem\] {
-  height: 40rem;
-}
-
-.h-\[45rem\] {
-  height: 45rem;
-}
-
-.h-\[37rem\] {
-  height: 37rem;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
-.h-\[90vh\] {
-  height: 90vh;
-}
-
-.h-5\/6 {
-  height: 83.333333%;
 }
 
 .max-h-\[40rem\] {
@@ -860,24 +832,12 @@ video {
   max-height: 500px;
 }
 
-.max-h-\[100\%\] {
-  max-height: 100%;
-}
-
 .min-h-\[30rem\] {
   min-height: 30rem;
 }
 
-.min-h-\[35rem\] {
-  min-height: 35rem;
-}
-
 .min-h-\[90vh\] {
   min-height: 90vh;
-}
-
-.min-h-\[100\%\] {
-  min-height: 100%;
 }
 
 .w-10\/12 {
@@ -918,10 +878,6 @@ video {
 
 .w-80 {
   width: 20rem;
-}
-
-.w-9\/12 {
-  width: 75%;
 }
 
 .w-\[300px\] {
@@ -1006,10 +962,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.items-stretch {
-  align-items: stretch;
 }
 
 .justify-end {
@@ -1276,6 +1228,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -1284,11 +1241,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .pb-20 {
@@ -1657,12 +1609,16 @@ video {
     width: 66.666667%;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:w-9\/12 {
     width: 75%;
+  }
+
+  .md\:w-\[inherit\] {
+    width: inherit;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:grid-cols-2 {
@@ -1679,6 +1635,15 @@ video {
 
   .md\:items-center {
     align-items: center;
+  }
+
+  .md\:bg-gray-900 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  }
+
+  .md\:bg-transparent {
+    background-color: transparent;
   }
 
   .md\:px-1 {
